# artifacts/api-server/src/routes/index.ts
@@ -6,6 +6,7 @@ import studiosRouter from "./studios";
 import photosRouter from "./photos";
 import driveRouter from "./drive";
 import publicRouter from "./public";
+import deliverablesRouter from "./deliverables";
 
 const router: IRouter = Router();
 
@@ -16,5 +17,6 @@ router.use(studiosRouter);
 router.use(photosRouter);
 router.use(driveRouter);
 router.use(publicRouter);
+router.use(deliverablesRouter);
 
 export default router;
